java8.spoofax3/test/statics/java/packages/unit-in-sub-package.no.spt
module packages/unit-in-sub-package_no

language metaborg-java

test unit-in-sub-package [[

test;



// error: 

[p] {

    [q] {

        [A]
        package p;
        public class A {}

    }
}

]] analysis fails
   run javacFails to ""
